crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__func__tests__compile_call_indirect.snap
---
source: crates/tracel-mlir-rs/src/dialect/func.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index) -> index {
    %f = constant @foo : (index) -> index
    %0 = call_indirect %f(%arg0) : (index) -> index
    return %0 : index
  }
}
