crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__func__tests__compile_external_function.snap
---
source: crates/tracel-mlir-rs/src/dialect/func.rs
expression: module.as_operation()
---
module {
  func.func private @foo(index) -> index
}
