crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__func__tests__compile_function.snap
---
source: crates/tracel-mlir-rs/src/dialect/func.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index) -> index {
    return %arg0 : index
  }
}
